# fflib

./: CMakeLists.txt  Makefile  README
benchmarks/overlap/: overlap3.c
cmake/: FindPortals.cmake
include/: ff.h  ff_collectives.h
src/: ff.c  ff_computation.c  ff_impl.h  ff_op.c  ff_recv.c  ff_schedule.c  ff_send.c  ff_storage.c
src/colls/: ff_allreduce.c  ff_alltoall.c  ff_collectives_impl.h
tests/: CMakeLists.txt  Makefile  alltoall.c  barrier.c  broadcast.c  gather.c  reduce.c  sbroadcast.c  scatter.c  scatter_long.c  solo_gather.c  sscatter.c
